Fix nowrap for list

--- a/src/ox-select/ox-select.component.scss
+++ b/src/ox-select/ox-select.component.scss
@@ -6,6 +6,12 @@ $hover: #f9f9f9;
 $select: #535f59;
 $input: #fafafa;
 
+ul {
+    margin: 0;
+    padding: 0;
+    list-style-type: none;
+}
+
 .no-select {
     position: fixed;
     background-color: transparent;
@@ -139,19 +145,13 @@ $input: #fafafa;
 
         &-item {
             position: relative;
-            //width: 100%;
-            min-height: 30px;
             border-bottom: 1px solid rgba($default, 0.1);
-            padding: 4px;
+            padding: 8px;
             padding-left: 12px;
             background-color: white;
             cursor: pointer;
             transition: all 150ms;
-            display: flex;
             overflow: hidden;
-            white-space: nowrap;
-            text-overflow: ellipsis;
-            align-items: center;
 
             &:hover {
                 background-color: $hover;
